--- a/cs336_basics/resource_accounting.ipynb
+++ b/cs336_basics/resource_accounting.ipynb
@@ -423,6 +423,28 @@
    "cell_type": "markdown",
    "id": "33cf71e6",
    "metadata": {},
+   "source": [
+    "For my TS training:\n",
+    "\n",
+    "batch_size=512 leads to 14.49 peak memory\n",
+    "\n",
+    "batch_size=1024 leads to 28.62 peak memory \n",
+    "\n",
+    "batch_size=2048 leads to 56.89 peak memory\n",
+    "\n",
+    "batch_size=4096 leads to 113.42 peak memory\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1f3771e",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2b362f7",
+   "metadata": {},
    "source": []
   }
  ],
